--- a/trunk/po/zh_TW.po
+++ b/trunk/po/zh_TW.po
@@ -1,11 +1,11 @@
 # Chinese (Taiwan) translation of GNOME MPlayer
 # Copyright (C) 2008 Kevin DeKorte <kdekorte@gmail.com>
-# This file is distributed under the same license as the gnome-mplayer package.
+# This file is distributed under the same license as the gmtk package.
 #
 # Hialan Liu <hialan.liu@gmail.com>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: gnome-mplayer\n"
+"Project-Id-Version: gmtk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-19 09:49-0600\n"
 "PO-Revision-Date: 2011-06-06 12:13+0000\n"
