--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,5 @@
+    Update po files
+    Update French translation
     Fix Issue #546 so that it only trys again when XVMC is the selected VO
     Disable XVMC fallback as it does not work in all cases, fixes Issue #546
     Capture keys x/z to alter subtitle delay
