--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,5 @@
+    Bump version to 1.0.5b1
+    Add in gmtk_version method
     Switch from AM_MAINTAINER_MODE to AM_MAINTAINER_MODE([enable]) in configure.ac
     Wait for the socket_id to be valid, but in plugin mode it may not so timeout
     Convert ignored key code to descriptive name
