--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,5 @@
+Development
+    Fix Issue #560, ATTRIBUTE_FORCE_CACHE not being processed
     Bump version to 1.0.5b1
     Add in gmtk_version method
     Switch from AM_MAINTAINER_MODE to AM_MAINTAINER_MODE([enable]) in configure.ac
